--- a/views/gem/uploadPage.ejs
+++ b/views/gem/uploadPage.ejs
@@ -19,7 +19,7 @@
               <input type="file" name="myFile" class="drop-zone__input" required>
             </div>    
             <input type="submit" class="btn btn-outline-primary mx-auto my-2" value="Submit" style="width:48%;">
-            <!-- <button class="btn btn-outline-primary mx-auto w-50 my-2" onclick="toggleTextBox(this)">Text Detect: ON</button> -->
+            <button class="btn btn-outline-primary mx-auto w-50 my-2" onclick="toggleTextBox(this)">Text Detect: ON</button>
           </form>
         </div> 
     </main>
@@ -49,10 +49,15 @@
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <script>
       function show_alert() {
-        if(!confirm("Do you really want to submit this. As this file seems to exist?")) {
-          return false;
-        }
-        this.form.submit();
+        // if(!confirm("Do you really want to submit this. As this file seems to exist?")) {
+        //   return false;
+        // }
+        alert("A file with this name already exists! Kindly Change the file name and Try Again!");
+        return false;
+        // var newName = prompt("Please enter new file name as the file already exists!",$('input[type="file"]')[0].files[0].name);
+        // $('input[type="file"]')[0].files[0].name = newName;
+        // console.log($('input[type="file"]')[0].files[0].name);
+        // this.form.submit();
       }
       document.querySelector('input[type="file"]').onchange = async function(e){
         // console.log(e.target.files[0].name);
@@ -62,12 +67,17 @@
           document.querySelector('#modal-button').setAttribute('data-whatever',e.target.files[0].name);
           document.querySelector('form').onsubmit = show_alert;
         }
+        else{
+          document.querySelector('.alert').classList.add('d-none');
+          // document.querySelector('#modal-button').setAttribute('data-whatever',e.target.files[0].name);
+          document.querySelector('form').onsubmit = null;
+        }
       }
       pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
       $('#exampleModal').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget) // Button that triggered the modal
         var recipient = button.data('whatever') // Extract info from data-* attributes
-        var url = '/uploads/'+recipient;
+        var url = '/gemUploads/'+recipient;
         pdfjsLib.getDocument(url).promise.then(function getPdfHelloWorld(pdf) {
           pdf.getPage(pdf.numPages-2).then(function getPageHelloWorld(page) {
             var scale = 1.3;
