--- a/views/helpPage.ejs
+++ b/views/helpPage.ejs
@@ -26,7 +26,7 @@
         <hr class="my-4">
         <p>This page contains the steps required to upload a new PO and view existing ones.</p>
         <p class="text-danger">To change the drive link and the sheet link please contact the Admin.</p>
-        <p class="text-danger">Make sure to add <strong>poscanner@top-suprstate-250407.iam.gserviceaccount.com</strong> as an editor to the account.</p>
+        <p class="text-danger">Make sure to add <strong>icsr-pos1@icsr-pos.iam.gserviceaccount.com</strong> as an editor to the Drive Folder and Google Sheet</p>
       </div>
       <h2 class="font-weight-bold">Steps to Upload a new PO</h2>
       <br>
