--- a/views/savedPo.ejs
+++ b/views/savedPo.ejs
@@ -51,7 +51,7 @@
                 <% console.log(po); %>
                 <td><%=po.serialNo %></td>
                 <td><%=po.indentNo %></td>
-                <td><%=po.sanctionDate %></td>
+                <td><%=po.poDate %></td>
                 <td><%=po.fileNo %></td>
                 <td><button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#exampleModal" data-whatever="<%= po.fileName %>"><i class="fa fa-eye"></i></button></td>
                 <td><a class="btn btn-outline-primary" href="/confirmationPage/<%= po._id %>"><i class="fa fa-edit"></i></a></td>
