--- a/views/helpPage.ejs
+++ b/views/helpPage.ejs
@@ -27,6 +27,7 @@
         <p>This page contains the steps required to upload a new PO and view existing ones.</p>
         <p class="text-danger">To change the drive link and the sheet link please contact the Admin.</p>
         <p class="text-danger">Make sure to add <strong>icsr-pos1@icsr-pos.iam.gserviceaccount.com</strong> as an editor to the Drive Folder and Google Sheet</p>
+        <p class="text-info">Detailed Guide can be found at this <a href="https://docs.google.com/document/d/e/2PACX-1vSRtupYp7onUnPdNGa7Wgg9qEZfBE4KBhrWCSwXW81fMo5VH5bhFVrtIRwWbfvUeI6_nAmCMlzOc3-w/pub">link</a></p>
       </div>
       <h2 class="font-weight-bold">Steps to Upload a new PO</h2>
       <br>
